--- a/jyo.html
+++ b/jyo.html
@@ -9,5 +9,6 @@
     <h1>developers code</h1>
     <p>welcome to git hub</p>
     <h1>hello jyotsna</h1>
+    <h1>developers update code</h1>
 </body>
 </html>
